update the whole codes

--- a/paper/suesthesis.cfg
+++ b/paper/suesthesis.cfg
@@ -1,11 +1,13 @@
-\ProvidesFile{suesthesis.cfg}[2023/05/05 v1.0 suesthesis configuration file]
+\ProvidesFile{suesthesis.cfg}[2023/11/28 v1.0 suesthesis configuration file]
 % 定义一些常见的变量
-
-% 定义标签的默认值
 % 中文学院名称
 \def\suesthesis@value@FacultyName{中文学院名称}
 % 专业中文名称
 \def\suesthesis@value@MajorName{专业名称}
+% 中文题目
+\def\suesthesis@value@ChineseTitle{（论文中文题目）}
+% 英文题目
+\def\suesthesis@value@EnglishTitle{English Thesis Title}
 % 学号
 \def\suesthesis@value@ClassNumber{M123456789}
 % 中文姓名
@@ -14,12 +16,19 @@
 \def\suesthesis@value@SupervisorName{导师姓名}
 % 中文年月日
 \def\suesthesis@value@FinishDateTime{\number\year 月 \number\month 日}
-% 中文题目
-\def\suesthesis@value@ChineseTitle{（论文中文题目）}
+% 中文关键词
+\def\suesthesis@value@ChineseKeywords{关键词1，关键词2，关键词3}
+% 英文关键词
+\def\suesthesis@value@EnglishKeywords{keywords1,keywords2,keywords3}
+
 
 %定义用户填写上述标签对应值的命令,需要用户在主文档自行调用
 % 中文学院名称
 \newcommand\FacultyName[1]{\def\suesthesis@value@FacultyName{#1}}
+% 中文题目
+\newcommand\ChineseTitle[1]{\def\suesthesis@value@ChineseTitle{#1}}
+% 英文题目
+\newcommand\EnglishTitle[1]{\def\suesthesis@value@EnglishTitle{#1}}
 % 专业中文名称
 \newcommand\MajorName[1]{\def\suesthesis@value@MajorName{#1}}
 % 学号
@@ -30,8 +39,10 @@
 \newcommand\SupervisorName[1]{\def\suesthesis@value@SupervisorName{#1}}
 % 中文年月日
 \newcommand\FinishDateTime[1]{\def\suesthesis@value@FinishDateTime{#1}}
-% 中文题目
-\newcommand\ChineseTitle[1]{\def\suesthesis@value@ChineseTitle{#1}}
+% 中文关键字
+\newcommand\ChineseKeywords[1]{\def\suesthesis@value@ChineseKeywords{#1}}
+% 英文关键字
+\newcommand\EnglishKeywords[1]{\def\suesthesis@value@EnglishKeywords{#1}}
 
 % 定义封面
 \newcommand{\makeCover}{
@@ -40,7 +51,7 @@
     \begin{center}
         \begin{figure}[hpt]
             \centering
-            \includegraphics[height=0.51in,width=4.21in]{logo.png}
+            \includegraphics[height=0.51in,width=4.12in]{logo.png}
         \end{figure}
 
         \erhao{Shanghai University of Engineering Science}
@@ -57,22 +68,77 @@
             \end{tabular}
         \end{table}
 
-        \vspace{45pt}
+        \vspace{90pt}
 
         \begin{table}[hp]
             \centering
             \sihao
             \linespread{1.2}
-            \begin{tabular}{p{1.10in}<{\centering}p{2.38in}<{\raggedright}}
-            学\quad \quad 院 &  \suesthesis@value@FacultyName\\
-            专\quad \quad 业 &  \suesthesis@value@MajorName\\
-            学\quad \quad 号 &  \suesthesis@value@ClassNumber\\
-            姓\quad \quad 名 &  \suesthesis@value@AuthorName\\
-            指导教师  &  \suesthesis@value@SupervisorName\\
-            完成日期  &  \suesthesis@value@FinishDateTime
+            \begin{tabular}{p{1.10in}<{\centering}p{2.38in}<{\centering}}
+            学\quad \quad 院 &  \suesthesis@value@FacultyName\\ \cline{2-2}
+            专\quad \quad 业 &  \suesthesis@value@MajorName\\ \cline{2-2}
+            学\quad \quad 号 &  \suesthesis@value@ClassNumber\\ \cline{2-2}
+            姓\quad \quad 名 &  \suesthesis@value@AuthorName\\ \cline{2-2}
+            指导教师  &  \suesthesis@value@SupervisorName\\ \cline{2-2}
+            完成日期  &  \suesthesis@value@FinishDateTime\\ \cline{2-2}
             \end{tabular}
         \end{table}
     \end{center}
+}
+%---------------------------------------------------------
+% 定义中文摘要环境
+\newenvironment{ChineseAbstract}{%
+    \if@twocolumn
+        \section*{\abstractname}%
+    \else
+        \begin{center}%
+        
+            % 论文题目：黑体，三号，加粗，居中，可分成1至2行
+            \heiti\sanhao\bfseries\suesthesis@value@ChineseTitle
+
+            \vspace{1em}
+            
+            {\zihao{3}\heiti\sanhao{摘 \qquad 要}}%
+
+        \end{center}%
+        % 宋体，小四，首行缩进2字符，800-1000字。
+        % 每行缩进两个汉字
+        \songti\xiaosi% 每行缩进两个汉字
+        \setlength\parindent{2em}
+
+    \fi
+}{  % 定义关键字环境
+    % 宋体，小四，一般4～6个，用逗号分开，最后一个关键词后不打标点符号
+
+    \vspace{1em}
+    
+    {\noindent\xiaosi\heiti\bfseries{关键字：}}~{\songti\xiaosi\suesthesis@value@ChineseKeywords}
+}
+%---------------------------------------------------------
+% 定义英文摘要环境
+\newenvironment{EnglishAbstract}{%
+    \if@twocolumn
+        \section*{\abstractname}%
+    \else
+        \begin{center}%
+            % 全部为大写英文，Times New Roman字体，三号，加粗，可分成1至3行，每行左右两边至少留5个字符空格
+            \heiti\sanhao\bfseries\suesthesis@value@EnglishTitle
+
+            \vspace{1em}
+            
+            {\zihao{3}\heiti\sanhao{ABSTRACT}}%
+            
+        \end{center}%
+         
+        
+    \fi
+}{
+    % 定义关键字环境
+    % 宋体，小四，一般4～6个，用逗号分开，最后一个关键词后不打标点符号
+
+    \vspace{1em}
+
+    {\noindent\xiaosi\heiti\bfseries{KEY WORDS:}}~{\songti\xiaosi\suesthesis@value@EnglishKeywords}
 }
 
 
