update the codes

--- a/paper/suesthesis.cfg
+++ b/paper/suesthesis.cfg
@@ -43,7 +43,24 @@
 \newcommand\ChineseKeywords[1]{\def\suesthesis@value@ChineseKeywords{#1}}
 % 英文关键字
 \newcommand\EnglishKeywords[1]{\def\suesthesis@value@EnglishKeywords{#1}}
+%---------------------------------------------------------
+% 定义标题
+% 黑体加粗三号字，居中。
+% 段前、段后均为0行。
+% 标准字间距。
+% 与页眉线之间空一行。
+% 与学生姓名之间也空一行。
+% 英文、数字和符号Times New Roman
 
+% 用楷体小四号打印学生姓名，空一格，再打印学生完整学号，学号用Times New Roman。均居中。
+\newcommand{\makeTitle}{
+    \begin{center}
+        \sanhao\heiti\bfseries\suesthesis@value@ChineseTitle
+
+        \xiaosi\kaishu\bfseries\suesthesis@value@AuthorName~~\suesthesis@value@ClassNumber
+    \end{center}
+}
+%---------------------------------------------------------
 % 定义封面
 \newcommand{\makeCover}{
     \vspace{34pt}
@@ -92,26 +109,22 @@
         \section*{\abstractname}%
     \else
         \begin{center}%
-        
-            % 论文题目：黑体，三号，加粗，居中，可分成1至2行
-            \heiti\sanhao\bfseries\suesthesis@value@ChineseTitle
-
             \vspace{1em}
-            
+            % 黑体加粗三号字居中。段前、段后均为0行。标准字间距。与页眉线之间空一行，与下面之间也空一行。
             {\zihao{3}\heiti\sanhao{摘 \qquad 要}}%
 
         \end{center}%
-        % 宋体，小四，首行缩进2字符，800-1000字。
-        % 每行缩进两个汉字
-        \songti\xiaosi% 每行缩进两个汉字
+        % 中文摘要内容，300~500个汉字以内。
+        % 中文宋体，英文和数字采用Times New Roman，小四号字，1.5倍行距，标准字间距。
+        \songti\xiaosi % 每行缩进两个汉字
         \setlength\parindent{2em}
 
     \fi
 }{  % 定义关键字环境
-    % 宋体，小四，一般4～6个，用逗号分开，最后一个关键词后不打标点符号
+    % 宋体小四号字。词与词之间用全角逗号分隔。“关键词：”用宋体加粗小四号字，顶格打印。
 
     \vspace{1em}
-    
+    % 与摘要之间空一行。行距均为1.5倍。
     {\noindent\xiaosi\heiti\bfseries{关键字：}}~{\songti\xiaosi\suesthesis@value@ChineseKeywords}
 }
 %---------------------------------------------------------
@@ -121,11 +134,11 @@
         \section*{\abstractname}%
     \else
         \begin{center}%
-            % 全部为大写英文，Times New Roman字体，三号，加粗，可分成1至3行，每行左右两边至少留5个字符空格
+            % Times New Roman加粗三号字，实词首字母大写，居中。段前、段后均为0行。标准字间距。与ABSTRACT之间空一行。
             \heiti\sanhao\bfseries\suesthesis@value@EnglishTitle
 
             \vspace{1em}
-            
+            % Times New Roman加粗三号字，大写，居中。段前、段后均为0行。标准字间距。
             {\zihao{3}\heiti\sanhao{ABSTRACT}}%
             
         \end{center}%
@@ -134,11 +147,15 @@
     \fi
 }{
     % 定义关键字环境
-    % 宋体，小四，一般4～6个，用逗号分开，最后一个关键词后不打标点符号
+    % 英文摘要内容，250～300个单词。Times New Roman小四号字，1.5倍行距，标准字间距。
+    % 与ABSTRACT之间空一行。
 
-    \vspace{1em}
+    \vspace{1em}\xiaosi
 
-    {\noindent\xiaosi\heiti\bfseries{KEY WORDS:}}~{\songti\xiaosi\suesthesis@value@EnglishKeywords}
+    % Times New Roman小四号字，首字母小写。词与词之间用半角逗号加一个空格分隔。
+    % “Key words:”用Times New Roman加粗小四号字。
+    {\noindent\xiaosi\heiti\bfseries{Key words:}}~{\songti\xiaosi\suesthesis@value@EnglishKeywords}
+    
 }
 
 
